# autogenu-jupyter

./: .gitignore  AutoGenU.ipynb  CMakeLists.txt  README.md  cartpole.ipynb  cartpole_error_monitoring.ipynb  hexacopter.ipynb  lateral_control.ipynb  mobilerobot.ipynb  mpc_controll.ipynb  package.xml  pendubot.ipynb  setting.sh  test_symbolic_F.ipynb  trajectory_following.ipynb
autogenu/: animator.py  autogenu.py  plotter.py
debug/: animator.py  computational_cost_comparison.py  debug.ipynb  debug.py  directory_finder.py  plotter.py  show_solution.py  visualize_path.py
doc/: debug_flow.drawio  equation.md
error_monitoring/: cartpole_error_monitoring.py  equation.md  error_monitoring.md  memo.md
error_monitoring/cartpole_error_monitoring/: CMakeLists.txt  cartpole_error_monitoring.py  main.cpp  ocp.hpp  test_numelic_F.ipynb  test_symbolic_F.ipynb
error_monitoring/cartpole_error_monitoring/config/: config.json  config_20230723.json  config_20230724.json
error_monitoring/cartpole_error_monitoring/log/: test_symbolic_F.ipynb
error_monitoring/cartpole_error_monitoring/python/cartpole_error_monitoring/: CMakeLists.txt  multiple_shooting_cgmres_solver.cpp  ocp.cpp  single_shooting_cgmres_solver.cpp
error_monitoring/config/: config.json  config_20230722.json
error_monitoring/generated_code/: CMakeLists.txt  main.cpp  ocp.hpp  symbolic_F.pkl
error_monitoring/generated_code/log/: symbolic_F.pkl  test_symbolic_F.ipynb
error_monitoring/generated_code/python/cartpole_error_monitoring/: multiple_shooting_cgmres_solver.cpp  ocp.cpp  single_shooting_cgmres_solver.cpp  zero_horizon_ocp_solver.cpp
error_monitoring/generated_code/python/generated_code/: CMakeLists.txt  multiple_shooting_cgmres_solver.cpp  ocp.cpp  single_shooting_cgmres_solver.cpp  zero_horizon_ocp_solver.cpp
examples/cpp/cartpole_error_monitoring/: CMakeLists.txt  main.cpp  ocp.hpp
include/cgmres/: horizon.hpp  integrator.hpp  logger.hpp  single_shooting_cgmres_solver.hpp  solver_settings.hpp  timer.hpp  types.hpp  zero_horizon_ocp_solver.hpp
include/cgmres/detail/: continuation_gmres.hpp  control_input_bounds.hpp  control_input_bounds_shooting.hpp  matrixfree_gmres.hpp  multiple_shooting_nlp.hpp  newton_gmres.hpp  single_shooting_nlp.hpp  zero_horizon_nlp.hpp
include/cgmres/python/: horizon.hpp  multiple_shooting_cgmres_solver.hpp  single_shooting_cgmres_solver.hpp  solver_settings.hpp  timer.hpp  zero_horizon_ocp_solver.hpp
